--- a/crypto/protocol/Cargo.toml
+++ b/crypto/protocol/Cargo.toml
@@ -17,7 +17,7 @@ serde-big-array="0.5.1"
 subxt          ={ package="subxt", git="https://github.com/paritytech/subxt.git", tag="v0.32.1", default-features=false }
 subxt-signer   ={ version="0.31.0", features=[] }
 tokio          ={ version="1.16", features=["sync", "rt", "macros"] }
-x25519-dalek   ="2.0.0-pre.1"
+x25519-dalek   ={ version="2.0.0", features=["static_secrets"] }
 futures        ="0.3"
 hex            ="*"
 blake2         ="0.10.4"
