--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -14,7 +14,7 @@ serde_json         ="1.0"
 anyhow             ="1.0.53"
 thiserror          ="1.0.47"
 blake2             ="0.10.4"
-x25519-dalek       ="2.0.0-pre.1"
+x25519-dalek       ={ version="2.0.0", features=["static_secrets"] }
 chacha20poly1305   ="0.10.1"
 rand_core          ="0.6.4"
 generic-array      ="0.14.6"
