--- a/crypto/testing-utils/Cargo.toml
+++ b/crypto/testing-utils/Cargo.toml
@@ -33,7 +33,7 @@ rand_core              ="0.6.4"
 serde                  ={ version="1.0", default-features=false, features=["derive"] }
 serde_json             ="1.0"
 thiserror              ="1.0.47"
-x25519-dalek           ="2.0.0"
+x25519-dalek           ={ version="2.0.0", features=["static_secrets"] }
 zeroize                ="1.5.7"
 generic-array          ="0.14.6"
 entropy-protocol       ={ path="../protocol", features=["server"] }
