--- a/crypto/testing-utils/Cargo.toml
+++ b/crypto/testing-utils/Cargo.toml
@@ -13,7 +13,6 @@ subxt             ={ package="subxt", git="https://github.com/paritytech/subxt.g
 sp-keyring        ="24.0.0"
 project-root      ="0.2.2"
 sp-core           ={ version="21.0.0" }
-sp-core-6         ={ package="sp-core", version="6.0.0" }
 env_logger        ="0.9.0"
 log               ="0.4.14"
 which             ="4.0.2"
@@ -41,7 +40,7 @@ reqwest                ={ version="0.11", features=["json", "stream"] }
 sha3                   ="0.10.8"
 base64                 ="0.13.0"
 synedrion              ={ git="ssh://git@github.com/entropyxyz/synedrion.git", tag="v0.0.9" }
-x25519-chacha20poly1305={ git="https://github.com/entropyxyz/x25519-chacha20poly1305.git", branch="main" }
+x25519-chacha20poly1305={ git="https://github.com/entropyxyz/x25519-chacha20poly1305.git", branch="peg/signedmessage-with-sr25519-seed" }
 # TODO rm unneeded features
 tokio       ={ version="1.16", features=["macros", "fs", "rt-multi-thread", "io-util"] }
 hex         ="0.4.3"
