Use `lazy_static` instead of `once_cell`
We already have this as a dependency and it's not very different in terms of characteristics.

--- a/crypto/testing-utils/Cargo.toml
+++ b/crypto/testing-utils/Cargo.toml
@@ -23,4 +23,4 @@ entropy-shared    ={ path="../shared" }
 
 # Logging
 tracing           ="0.1.37"
-tracing-subscriber={ version="0.3.17", features=["env-filter", "json"] }
+tracing-subscriber={ version="0.3.17", features=["env-filter"] }
