Wasm bindings for user to participate in DKG and signing protocols (#414)
* Dependencies for wasm

* User functions for wasm

* Refactor

* Add wasm-bindgen fn to user participates dkg fn

* Attempt test for nodejs

* Add makefile

* Try using wasm-bindgen-derive

* Nodejs test

* Add `extern crate alloc`

* Put extern crate alloc at top level lib.rs

* Fmt

* Fix types for wasm run_dkg fn and add fn to run signing protocol from JS

* WIP Update nodejs test

* Fix ValidatorInfo type for wasm

* wasm sign fn should not take sig_uid as well as sig_hash becasue sig_uid contains sig_hash

* WIP Update nodejs test

* Add additional logging, and improve parsing of arguments in wasm

* Test script for wasm/nodejs test

* Add process feature to tokio

* WIP Add additional test for signing protocol in private mode using wasm

* Fmt

* Use only neccessary features of subxt-signer crate

* Update nodejs script to also test DKG

* Add test for user participates in DKG protocol on nodejs

* Bump synedrion

* Minor edit to how error is displayed

* Add base64 dependency

* Add logging, return a base64 signature

* Improve test logging

* Tidy makefile

* Tidy nodejs-test

* Tidy and remove logging from protocol

* Update tests

* Use synedrion fix-32bit branch

* Update tests after merge

* Updates to protocol after merging master

* Taplo

* Revert synedrion to v0.0.9 to see how it effects tests

* Taplo

* Use synedrion fix-32bit branch

* Changes following merging master

* Add check to CI that entropy-protocol will compile to wasm

* Improve tests and tidy

* Attempt to build entropy-protocol nodejs package in CI

* Fix CI script

* Another fix to CI script

* Another fix to CI script

* Add link to issue to TODO

* Improve wasm_register test

* Update server tests for changed ValidatorInfo type

* Rm comment

* Change package name of nodejs test module

Co-authored-by: Her

--- a/.circleci/then.yml
+++ b/.circleci/then.yml
@@ -27,6 +27,7 @@ commands:
                   sudo sed -i "/#\$nrconf{restart} = 'i';/s/.*/\$nrconf{restart} = 'a';/" /etc/needrestart/needrestart.conf
                   sudo apt-get update
                   sudo apt install -y libssl-dev clang libclang-dev tor && sudo systemctl start tor && sudo systemctl enable tor
+                  sudo apt install -y yarn
     install-rust:
         steps:
             - run:
@@ -36,6 +37,9 @@ commands:
                   source "$HOME/.cargo/env"
                   rustup update stable
                   rustup target add wasm32-unknown-unknown
+    install-wasm-pack:
+        steps:
+            - run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
     install-dependencies-and-checkout:
         steps:
             # Needed to getch the currently private `synedrion` dependency
@@ -47,6 +51,7 @@ commands:
             - checkout
             - install-dependencies
             - install-rust
+            - install-wasm-pack
     new-cmd:
         steps:
             - run: echo test
@@ -100,6 +105,14 @@ jobs:
         steps:
             - increase-swap
             - install-dependencies-and-checkout
+            - run:
+                name: Build entropy-protocol nodejs package.
+                command: |
+                  cd crypto/protocol
+                  make build-nodejs
+                  cd nodejs-test
+                  yarn
+                  cd ../../..
             - run:
                 command: pushd node && cargo build --all-targets --release -j $(nproc) && cargo test --all-targets --release
                 no_output_timeout: 45m
