--- a/crypto/protocol/Cargo.toml
+++ b/crypto/protocol/Cargo.toml
@@ -11,11 +11,11 @@ edition    ='2021'
 [dependencies]
 async-trait    ="0.1.73"
 entropy-shared ={ path="../shared", default-features=false }
-synedrion      ={ git="ssh://git@github.com/entropyxyz/synedrion.git", tag="v0.0.9" }
+synedrion      ={ git="ssh://git@github.com/entropyxyz/synedrion.git", branch="fix-32bit" }
 serde          ={ version="1.0", features=["derive"], default-features=false }
 serde-big-array="0.5.1"
 subxt          ={ package="subxt", git="https://github.com/paritytech/subxt.git", tag="v0.32.1", default-features=false }
-subxt-signer   ={ version="0.31.0", features=[] }
+subxt-signer   ={ version="0.31.0", features=["sr25519"], default-features=false }
 tokio          ={ version="1.16", features=["sync", "rt", "macros"] }
 x25519-dalek   ="2.0.0-pre.1"
 futures        ="0.3"
@@ -32,8 +32,18 @@ bincode        ="1.3.3"
 axum             ={ version="0.6.18", features=["ws"], optional=true }
 tokio-tungstenite={ version="0.19.0", optional=true }
 
+# Used only with the `wasm` feature
+gloo-net            ={ version="0.4.0", default-features=false, features=["websocket"], optional=true }
+wasm-bindgen-futures={ version="0.4.37", optional=true }
+wasm-bindgen        ={ version="0.2.87", optional=true }
+wasm-bindgen-derive ={ version="0.2", optional=true }
+js-sys              ={ version="0.3.64", optional=true }
+base64              ={ version="0.13.0", optional=true }
+serde_json          ={ version="1.0", optional=true }
+
 [features]
 default=["server"]
+
 server=[
   "dep:axum",
   "dep:tokio-tungstenite",
@@ -41,4 +51,18 @@ server=[
   "subxt/substrate-compat",
   "subxt/native",
 ]
-wasm=["entropy-shared/wasm", "subxt-signer/web"]
+wasm=[
+  "entropy-shared/wasm",
+  "subxt-signer/web",
+  "dep:gloo-net",
+  "dep:wasm-bindgen-futures",
+  "dep:wasm-bindgen",
+  "dep:wasm-bindgen-derive",
+  "dep:js-sys",
+  "dep:base64",
+  "subxt/web",
+  "dep:serde_json",
+]
+
+[lib]
+crate-type=["cdylib", "rlib"]
