--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -22,12 +22,11 @@ zeroize            ="1.5.7"
 hex                ="*"
 reqwest-eventsource="0.4"
 serde_derive       ="1.0.147"
-
-synedrion={ git="ssh://git@github.com/entropyxyz/synedrion.git", tag="v0.0.9" }
+synedrion          ={ git="ssh://git@github.com/entropyxyz/synedrion.git", branch="fix-32bit" }
 
 # Async
 futures="0.3"
-tokio  ={ version="1.16", features=["macros", "fs", "rt-multi-thread", "io-util"] }
+tokio  ={ version="1.16", features=["macros", "fs", "rt-multi-thread", "io-util", "process"] }
 
 # HTTP
 reqwest    ={ version="0.11", features=["json", "stream"] }
