Replace `env_logger` with `tracing` in tests (#505)
* Remove `log` crate dependency

We don't use this anymore

* Remove `env_logger` from tests

* Replace `println!` in server with `tracing::info!`

* First go at initializing global logger in tests

* Use `lazy_static` instead of `once_cell`

We already have this as a dependency and it's not very different in terms of characteristics.

* Move logger init code out of `testing-utils`

I think it's fine to have it in the server test helpers.

* Manually initialize logger in `user` tests

* Initialize logger in the rest of the tests

* By default filter out logs that aren't `ERROR` level

* Initialize logger before cleaning `kvdb`

* Add missing logger initilization

--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -46,7 +46,6 @@ entropy-protocol={ path="../protocol", features=["server"] }
 ec-runtime={ git="ssh://git@github.com/entropyxyz/constraints.git", tag="v0.3.0" }
 
 # Logging
-log               ="0.4.17"                                              # todo: remove, overlaps tracing
 tracing           ="0.1.37"
 tracing-subscriber={ version="0.3.17", features=["env-filter", "json"] }
 tower-http        ={ version="0.3.4", features=["trace", "cors"] }
@@ -73,6 +72,7 @@ project-root      ="0.2.2"
 sp-keyring        ="24.0.0"
 more-asserts      ="0.3.1"
 template-barebones={ git="ssh://git@github.com/entropyxyz/constraints.git", tag="v0.2.0" }
+lazy_static       ="1.4.0"
 
 [features]
 default=['std']
