--- a/crypto/testing-utils/Cargo.toml
+++ b/crypto/testing-utils/Cargo.toml
@@ -15,10 +15,12 @@ subxt             ={ package="subxt", git="https://github.com/paritytech/subxt.g
 sp-keyring        ="24.0.0"
 project-root      ="0.2.2"
 sp-core           ={ version="21.0.0", default-features=false }
-env_logger        ="0.9.0"
-log               ="0.4.14"
 which             ="4.0.2"
 parity-scale-codec="3.0.0"
 lazy_static       ="1.4.0"
 hex-literal       ="0.3.4"
 entropy-shared    ={ path="../shared" }
+
+# Logging
+tracing           ="0.1.37"
+tracing-subscriber={ version="0.3.17", features=["env-filter"] }
