--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -32,6 +32,7 @@ tokio  ={ version="1.16", features=["macros", "fs", "rt-multi-thread", "io-util"
 reqwest    ={ version="0.11", features=["json", "stream"] }
 axum       ={ version="0.6.18", features=["ws"] }
 axum-macros="0.3.7"
+
 # Substrate
 subxt             ={ package="subxt", git="https://github.com/paritytech/subxt.git", tag="v0.32.1" }
 parity-scale-codec="3.4.0"
@@ -49,6 +50,7 @@ ec-runtime={ git="ssh://git@github.com/entropyxyz/constraints.git", tag="v0.3.0"
 tracing           ="0.1.37"
 tracing-subscriber={ version="0.3.17", features=["env-filter", "json"] }
 tower-http        ={ version="0.3.4", features=["trace", "cors"] }
+uuid={version="1.5.0", features=["v4"]}
 
 # Misc
 tokio-tungstenite="0.19.0"
