--- a/crypto/testing-utils/Cargo.toml
+++ b/crypto/testing-utils/Cargo.toml
@@ -20,6 +20,14 @@ parity-scale-codec="3.0.0"
 lazy_static       ="1.4.0"
 hex-literal       ="0.3.4"
 entropy-shared    ={ path="../shared" }
+entropy-protocol  ={ path="../protocol" }
+axum              ={ version="0.6.18" }
+rand_core         ="0.6.4"
+kvdb              ={ path="../kvdb", default-features=false }
+synedrion         ={ git="ssh://git@github.com/entropyxyz/synedrion.git", branch="fix-32bit" }
+server            ={ path="../server" }
+tokio             ={ version="1.16", features=["macros", "fs", "rt-multi-thread", "io-util", "process"] }
+subxt-signer      ="0.31.0"
 
 # Logging
 tracing           ="0.1.37"
