--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -74,6 +74,9 @@ more-asserts      ="0.3.1"
 template-barebones={ git="ssh://git@github.com/entropyxyz/constraints.git", tag="v0.2.0" }
 lazy_static       ="1.4.0"
 
+[build-dependencies]
+vergen = "0.1.1"
+
 [features]
 default=['std']
 std    =["sp-core/std"]
