--- a/.github/workflows/container-build-and-push.yaml
+++ b/.github/workflows/container-build-and-push.yaml
@@ -38,11 +38,6 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_CI_TOKEN }}
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
@@ -55,35 +50,24 @@ jobs:
             type=ref,event=pr
             type=semver,pattern={{version}}
             type=sha,format=long
-      - name: Build ${{ inputs.docker_build_arg_package }} container image
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Builder
+        uses: docker/setup-buildx-action@v3
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_CI_TOKEN }}
+      - name: Build and push ${{ inputs.docker_build_arg_package }} container image
         id: docker-build
         uses: docker/build-push-action@v5
         with:
-          build-args:
+          platforms: linux/amd64,linux/arm64
+          build-args: |
             PACKAGE=${{ inputs.docker_build_arg_package }}
           secrets: |
             credentials=${{ secrets.CI_MACHINE_USER_TOKEN }}
           labels: ${{ steps.meta.outputs.labels }}
           tags: ${{ steps.meta.outputs.tags }}
           push: true
-      - name: Copy binary to local filesystem
-        id: copy-binary
-        run: |
-          tmpdir="$(mktemp -d)"
-          container_id=$(docker container run \
-            --rm \
-            --detach \
-            --entrypoint /bin/sleep \
-            $(echo "$DOCKER_METADATA_OUTPUT_TAGS" | head -n 1 | tr -d $'\n') \
-            99) # You're getting 99 seconds of sleeeeeeepy.
-          docker container cp \
-            ${container_id}:/usr/local/bin/${{ inputs.docker_build_arg_package }} \
-            ${tmpdir}/${{ inputs.docker_build_arg_package }}
-          docker container kill --signal SIGKILL "${container_id}"
-          echo path=${tmpdir}/${{ inputs.docker_build_arg_package }} >> $GITHUB_OUTPUT
-      - name: Upload ${{ inputs.docker_build_arg_package }} binary artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: ${{ inputs.docker_build_arg_package}}_${{ inputs.git_ref_basename }}_${{ runner.os }}_${{ runner.arch }}
-          path: ${{ steps.copy-binary.outputs.path }}
-          if-no-files-found: error
