--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -195,6 +195,7 @@ std=[
 ]
 runtime-benchmarks=[
   "frame-benchmarking/runtime-benchmarks",
+  "frame-election-provider-support/runtime-benchmarks",
   "frame-support/runtime-benchmarks",
   "frame-system/runtime-benchmarks",
   "pallet-election-provider-multi-phase/runtime-benchmarks",
@@ -217,13 +218,16 @@ runtime-benchmarks=[
   "pallet-identity/runtime-benchmarks",
   "pallet-im-online/runtime-benchmarks",
   "pallet-indices/runtime-benchmarks",
+  "pallet-identity/runtime-benchmarks",
   "pallet-lottery/runtime-benchmarks",
   "pallet-membership/runtime-benchmarks",
   "pallet-multisig/runtime-benchmarks",
   "pallet-preimage/runtime-benchmarks",
   "pallet-proxy/runtime-benchmarks",
   "pallet-referenda/runtime-benchmarks",
+  "pallet-recovery/runtime-benchmarks",
   "pallet-relayer/runtime-benchmarks",
+  "pallet-sudo/runtime-benchmarks",
   "pallet-scheduler/runtime-benchmarks",
   "pallet-society/runtime-benchmarks",
   "pallet-staking/runtime-benchmarks",
