--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -40,7 +40,7 @@ sp-core           ={ version="21.0.0", default-features=false }
 entropy-shared         ={ path="../shared" }
 kvdb                   ={ path="../kvdb", default-features=false }
 entropy-protocol       ={ path="../protocol", features=["server"] }
-x25519-chacha20poly1305={ git="https://github.com/entropyxyz/x25519-chacha20poly1305.git", branch="peg/unsafe-test-mode" }
+x25519-chacha20poly1305={ git="https://github.com/entropyxyz/x25519-chacha20poly1305.git", tag="v0.2.1" }
 
 # Constraints
 ec-runtime={ git="ssh://git@github.com/entropyxyz/constraints.git", tag="v0.3.0" }
@@ -74,7 +74,7 @@ sp-keyring="24.0.0"
 more-asserts="0.3.1"
 template-barebones={ git="ssh://git@github.com/entropyxyz/constraints.git", tag="v0.2.0" }
 lazy_static="1.4.0"
-x25519-chacha20poly1305={ git="https://github.com/entropyxyz/x25519-chacha20poly1305.git", branch="peg/unsafe-test-mode", features=[
+x25519-chacha20poly1305={ git="https://github.com/entropyxyz/x25519-chacha20poly1305.git", tag="v0.2.1", features=[
   "unsafe",
 ] }
 
