--- a/crypto/protocol/Cargo.toml
+++ b/crypto/protocol/Cargo.toml
@@ -15,7 +15,9 @@ synedrion      ={ git="ssh://git@github.com/entropyxyz/synedrion.git", branch="f
 serde          ={ version="1.0", features=["derive"], default-features=false }
 serde-big-array="0.5.1"
 subxt          ={ package="subxt", git="https://github.com/paritytech/subxt.git", tag="v0.32.1", default-features=false }
-subxt-signer   ={ version="0.31.0", features=["sr25519"], default-features=false }
+sp-core        ={ version="21.0.0", default-features=false, features=["full_crypto", "serde"] }
+generic-array  ="0.14.6"
+schnorrkel     ={ version="0.9.1", default-features=false, features=["std"] }
 tokio          ={ version="1.16", features=["sync", "rt", "macros"] }
 x25519-dalek   ={ version="2.0.0", features=["static_secrets"] }
 futures        ="0.3"
@@ -53,7 +55,6 @@ server=[
 ]
 wasm=[
   "entropy-shared/wasm",
-  "subxt-signer/web",
   "dep:gloo-net",
   "dep:wasm-bindgen-futures",
   "dep:wasm-bindgen",
@@ -61,6 +62,7 @@ wasm=[
   "dep:js-sys",
   "dep:base64",
   "subxt/web",
+  "schnorrkel/wasm-bindgen",
   "dep:serde_json",
 ]
 
