--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -24,7 +24,7 @@ synedrion          ={ git="ssh://git@github.com/entropyxyz/synedrion.git", branc
 
 # Async
 futures="0.3"
-tokio  ={ version="1.16", features=["macros", "fs", "rt-multi-thread", "io-util", "process"] }
+tokio  ={ version="1.16", features=["macros", "fs", "rt-multi-thread", "io-util", "process", "sync"] }
 
 # HTTP
 reqwest    ={ version="0.11", features=["json", "stream"] }
@@ -48,6 +48,7 @@ ec-runtime={ git="ssh://git@github.com/entropyxyz/constraints.git", tag="v0.3.0"
 # Logging
 tracing                 ="0.1.37"
 tracing-subscriber      ={ version="0.3.17", features=["env-filter", "json"] }
+tracing-loki            ="0.2"
 tower-http              ={ version="0.3.4", features=["trace", "cors"] }
 tracing-bunyan-formatter="0.3.9"
 uuid                    ={ version="1.5.0", features=["v4"] }
