Add `bunyan` JSON formatter (#524)
* Add `bunyan` JSON formatter

* Add `CHANGELOG` entry

--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -46,10 +46,11 @@ x25519-chacha20poly1305={ git="https://github.com/entropyxyz/x25519-chacha20poly
 ec-runtime={ git="ssh://git@github.com/entropyxyz/constraints.git", tag="v0.3.0" }
 
 # Logging
-tracing           ="0.1.37"
-tracing-subscriber={ version="0.3.17", features=["env-filter", "json"] }
-tower-http        ={ version="0.3.4", features=["trace", "cors"] }
-uuid              ={ version="1.5.0", features=["v4"] }
+tracing                 ="0.1.37"
+tracing-subscriber      ={ version="0.3.17", features=["env-filter", "json"] }
+tower-http              ={ version="0.3.4", features=["trace", "cors"] }
+tracing-bunyan-formatter="0.3.9"
+uuid                    ={ version="1.5.0", features=["v4"] }
 
 # Misc
 tokio-tungstenite="0.19.0"
