Export plain binaries, always `strip(1)`, use `cargo build`.
This commit handles a recent modification in the `server` binary that
converted it into a Rust library. We can't use `rustc` to build this any
longer because the library needs to be linked against its binary in a
separate step. To do this, we have to use `cargo build` instead.

Additionally, we want to export the plain binaries (not as part of a
container image), so that we can post them as release artifacts when we
create a formal GitHub Release object for a given tagged version.

--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -66,4 +66,4 @@ jobs:
             --title "${{ needs.build.outputs.git_ref_basename }}" \
             $(echo ${{ github.ref_name }} | grep --quiet -E '^test|v[0-9]\.[0-9]\.[0-9]-' && echo '--prerelease') \
             --verify-tag "${{ github.ref_name }}" \
-            {entropy,server}_${{ needs.git-ref-basename.outputs.git_ref_basename }}_${{ runner.os }}_${{ runner.arch }}/*
+            {entropy,server}_${{ needs.git-ref-basename.outputs.git_ref_basename }}/*
