--- a/crypto/protocol/Cargo.toml
+++ b/crypto/protocol/Cargo.toml
@@ -9,24 +9,27 @@ repository ='https://github.com/entropyxyz/entropy-core'
 edition    ='2021'
 
 [dependencies]
-async-trait    ="0.1.73"
-entropy-shared ={ path="../shared", default-features=false }
-synedrion      ={ git="ssh://git@github.com/entropyxyz/synedrion.git", branch="fix-32bit" }
-serde          ={ version="1.0", features=["derive"], default-features=false }
-serde-big-array="0.5.1"
-subxt          ={ package="subxt", git="https://github.com/paritytech/subxt.git", tag="v0.32.1", default-features=false }
-subxt-signer   ={ version="0.31.0", features=["sr25519"], default-features=false }
-tokio          ={ version="1.16", features=["sync", "rt", "macros"] }
-x25519-dalek   ={ version="2.0.0", features=["static_secrets"] }
-futures        ="0.3"
-hex            ="*"
-blake2         ="0.10.4"
-thiserror      ="1.0.48"
-snow           ="0.9.2"
-getrandom      ={ version="0.2", features=["js"] }
-rand_core      ={ version="0.6.4", features=["getrandom"] }
-tracing        ="0.1.37"
-bincode        ="1.3.3"
+async-trait="0.1.73"
+entropy-shared={ path="../shared", default-features=false }
+synedrion={ git="ssh://git@github.com/entropyxyz/synedrion.git", branch="fix-32bit" }
+serde={ version="1.0", features=["derive"], default-features=false }
+subxt={ package="subxt", git="https://github.com/paritytech/subxt.git", tag="v0.32.1", default-features=false }
+sp-core={ version="21.0.0", default-features=false, features=["full_crypto", "serde"] }
+tokio={ version="1.16", features=["sync", "rt", "macros"] }
+x25519-dalek={ version="2.0.0", features=["static_secrets"] }
+futures="0.3"
+hex="*"
+blake2="0.10.4"
+thiserror="1.0.48"
+snow="0.9.2"
+getrandom={ version="0.2", features=["js"] }
+rand_core={ version="0.6.4", features=["getrandom"] }
+tracing="0.1.37"
+bincode="1.3.3"
+schnorrkel={ version="0.9.1", default-features=false, features=[
+  "std",
+  "wasm-bindgen",
+], optional=true }
 
 # Used only with the `server` feature to implement the WsConnection trait
 axum             ={ version="0.6.18", features=["ws"], optional=true }
@@ -53,7 +56,6 @@ server=[
 ]
 wasm=[
   "entropy-shared/wasm",
-  "subxt-signer/web",
   "dep:gloo-net",
   "dep:wasm-bindgen-futures",
   "dep:wasm-bindgen",
@@ -62,6 +64,7 @@ wasm=[
   "dep:base64",
   "subxt/web",
   "dep:serde_json",
+  "dep:schnorrkel",
 ]
 
 [lib]
