--- a/crypto/testing-utils/Cargo.toml
+++ b/crypto/testing-utils/Cargo.toml
@@ -42,6 +42,7 @@ base64                 ="0.13.0"
 synedrion              ={ git="ssh://git@github.com/entropyxyz/synedrion.git", branch="fix-32bit" }
 x25519-chacha20poly1305={ git="https://github.com/entropyxyz/x25519-chacha20poly1305.git", branch="peg/unsafe-test-mode" }
 hex                    ="0.4.3"
+bincode                ="1.3.3"
 
 # For test CLI
 clap   ={ version="4.4.6", features=["derive"] }
