--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -66,6 +66,7 @@ snow             ="0.9.2"
 sha3             ="0.10.8"
 async-trait      ="0.1.73"
 subxt-signer     ="0.31.0"
+hostname         ="0.3"
 
 [dev-dependencies]
 testing-utils={ path="../testing-utils" }
