--- a/crypto/protocol/Makefile
+++ b/crypto/protocol/Makefile
@@ -1,19 +1,23 @@
 # Builds a JS Module for nodejs with glue for the compiled WASM.
 build-nodejs ::
-	wasm-pack build --target nodejs . --no-default-features -F wasm
+	wasm-pack build --target nodejs --scope "entropyxyz" . --no-default-features -F wasm
+	cp js-README.md ./pkg/README.md
 
 # Builds a JS Module for web with glue for the compiled WASM.
 build-web ::
-	wasm-pack build --target web . --no-default-features -F wasm
+	wasm-pack build --target web --scope "entropyxyz" . --no-default-features -F wasm
+	cp js-README.md ./pkg/README.md
 
 # Another build option for compiling to webpack, builds a typescript library around the WASM for use
 # with npm.
 build-bundler ::
-	wasm-pack build --target bundler . --no-default-features -F wasm
+	wasm-pack build --target bundler --scope "entropyxyz" . --no-default-features -F wasm
+	cp js-README.md ./pkg/README.md
 
 # Builds a JS Module for nodejs with testing features
 build-nodejs-testing ::
-	wasm-pack build --target nodejs . --no-default-features -F wasm-test
+	wasm-pack build --target nodejs --scope "entropyxyz" . --no-default-features -F wasm-test
+	cp js-README.md ./pkg/README.md
 
 # Cleans out build artifacts.
 clean ::
