--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -43,7 +43,8 @@ entropy-protocol       ={ path="../protocol", features=["server"] }
 x25519-chacha20poly1305={ git="https://github.com/entropyxyz/x25519-chacha20poly1305.git", tag="v0.2.1" }
 
 # Constraints
-ec-runtime={ git="ssh://git@github.com/entropyxyz/constraints.git", tag="v0.4.0" }
+# ec-runtime={ git="ssh://git@github.com/entropyxyz/constraints.git", tag="v0.4.0" }
+ec-runtime={ git="ssh://git@github.com/entropyxyz/constraints.git", branch="add-custom-hash" }
 
 # Logging
 tracing                 ="0.1.37"
@@ -63,9 +64,11 @@ clap             ={ version="4.0.29", features=["derive"] }
 num              ="0.4.0"
 async-stream     ="0.3.5"
 snow             ="0.9.2"
-sha3             ="0.10.8"
+sha3 = "0.10.8"
 async-trait      ="0.1.73"
 hostname         ="0.3"
+sha1 = "0.10.6"
+sha2 = "0.10.8"
 
 [dev-dependencies]
 testing-utils={ path="../testing-utils" }
