--- a/pallets/programs/Cargo.toml
+++ b/pallets/programs/Cargo.toml
@@ -50,7 +50,7 @@ sp-staking    ={ version="4.0.0-dev", default-features=false, git='https://githu
 sp-io         ={ version="23.0.0", default-features=false, git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
 sp-runtime    ={ version="24.0.0", default-features=false, git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
 sp-std        ={ package="sp-std", git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0", default-features=false }
-entropy-shared={ path="../../crypto/shared", default-features=false, features=["wasm-no-std"] }
+entropy-shared={ path="../../crates/shared", default-features=false, features=["wasm-no-std"] }
 
 [dev-dependencies]
 pallet-balances={ version="4.0.0-dev", git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
