--- a/pallets/propagation/Cargo.toml
+++ b/pallets/propagation/Cargo.toml
@@ -49,7 +49,7 @@ sp-io                ={ version="23.0.0", default-features=false, git="https://g
 lite-json            ={ version="0.1", default-features=false }
 sp-runtime           ={ version="24.0.0", default-features=false, git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
 sp-core              ={ version="21.0.0", default-features=false, git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
-entropy-shared       ={ path="../../crypto/shared", default-features=false, features=["wasm-no-std"] }
+entropy-shared       ={ path="../../crates/shared", default-features=false, features=["wasm-no-std"] }
 sp-application-crypto={ version="23.0.0", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
 
 [dev-dependencies]
