--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -108,7 +108,7 @@ pallet-transaction-pause={ version='0.0.9', default-features=false, path='../pal
 pallet-free-tx          ={ version='0.0.9', default-features=false, path='../pallets/free-tx' }
 pallet-propagation      ={ version='0.0.9', default-features=false, path='../pallets/propagation' }
 
-entropy-shared={ path="../crypto/shared", default-features=false, features=["wasm-no-std"] }
+entropy-shared={ path="../crates/shared", default-features=false, features=["wasm-no-std"] }
 
 [build-dependencies]
 substrate-wasm-builder={ version="5.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0", optional=true }
