--- a/crates/kvdb/Cargo.toml
+++ b/crates/kvdb/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name      ="kvdb"
+name      ="entropy-kvdb"
 version   ="0.1.0"
 authors   =['Entropy Cryptography <engineering@entropy.xyz>']
 homepage  ='https://entropy.xyz/'
