--- a/crates/testing-utils/Cargo.toml
+++ b/crates/testing-utils/Cargo.toml
@@ -21,7 +21,7 @@ tokio             ={ version="1.16", features=["macros", "fs", "rt-multi-thread"
 axum              ={ version="0.6.18" }
 entropy-shared    ={ path="../shared" }
 entropy-kvdb      ={ path="../kvdb", default-features=false }
-entropy-tss       ={ path="../server" }
+entropy-tss       ={ path="../threshold-signing-server" }
 
 # For test client
 anyhow                 ="1.0.75"
