Update TSS folder name again
This should be more accurate

--- a/crates/threshold-signature-server/Cargo.toml
+++ b/crates/threshold-signature-server/Cargo.toml
@@ -3,7 +3,7 @@ name       ="entropy-tss"
 version    ="0.1.0"
 authors    =['Entropy Cryptography <engineering@entropy.xyz>']
 homepage   ='https://entropy.xyz/'
-description='Entropy threshold signing server'
+description='Entropy threshold signature scheme (TSS) server'
 license    ='AGPL-3.0-or-later'
 repository ='https://github.com/entropyxyz/entropy-core'
 edition    ='2021'
