--- a/crates/protocol/Cargo.toml
+++ b/crates/protocol/Cargo.toml
@@ -9,41 +9,46 @@ repository ='https://github.com/entropyxyz/entropy-core'
 edition    ='2021'
 
 [dependencies]
-async-trait="0.1.73"
-entropy-shared={ path="../shared", default-features=false }
-synedrion="0.1"
-serde={ version="1.0", features=["derive"], default-features=false }
-subxt={ package="subxt", git="https://github.com/paritytech/subxt.git", tag="v0.32.1", default-features=false }
-sp-core={ version="21.0.0", default-features=false, features=["full_crypto", "serde"] }
-tokio={ version="1.16", features=["sync", "rt", "macros"] }
-x25519-dalek={ version="2.0.0", features=["static_secrets"] }
-futures="0.3"
-hex="*"
-blake2="0.10.4"
-thiserror="1.0.48"
-snow="0.9.2"
-getrandom={ version="0.2", features=["js"] }
-rand_core={ version="0.6.4", features=["getrandom"] }
-tracing="0.1.37"
-bincode="1.3.3"
-schnorrkel={ version="0.9.1", default-features=false, features=[
-  "std",
-  "wasm-bindgen",
-], optional=true }
-x25519-chacha20poly1305={ git="https://github.com/entropyxyz/x25519-chacha20poly1305.git", tag="v0.2.1" }
+async-trait     ="0.1.73"
+entropy-shared  ={ path="../shared", default-features=false }
+synedrion       ="0.1"
+serde           ={ version="1.0", features=["derive"], default-features=false }
+subxt           ={ package="subxt", git="https://github.com/paritytech/subxt.git", tag="v0.32.1", default-features=false }
+sp-core         ={ version="21.0.0", default-features=false, features=["full_crypto", "serde"] }
+tokio           ={ version="1.16", features=["sync", "rt", "macros"] }
+x25519-dalek    ={ version="2.0.0", features=["static_secrets"] }
+futures         ="0.3"
+hex             ="*"
+blake2          ="0.10.4"
+thiserror       ="1.0.48"
+snow            ="0.9.2"
+getrandom       ={ version="0.2", features=["js"] }
+rand_core       ={ version="0.6.4", features=["getrandom"] }
+tracing         ="0.1.37"
+bincode         ="1.3.3"
+chacha20poly1305="0.10.1"
+serde_json      ="1.0"
+zeroize         ="1.5.7"
+generic-array   ="0.14.6"
 
 # Used only with the `server` feature to implement the WsConnection trait
 axum             ={ version="0.6.18", features=["ws"], optional=true }
 tokio-tungstenite={ version="0.19.0", optional=true }
 
 # Used only with the `wasm` feature
-gloo-net            ={ version="0.4.0", default-features=false, features=["websocket"], optional=true }
+gloo-net={ version="0.4.0", default-features=false, features=["websocket"], optional=true }
 wasm-bindgen-futures={ version="0.4.37", optional=true }
-wasm-bindgen        ={ version="0.2.87", optional=true }
-wasm-bindgen-derive ={ version="0.2", optional=true }
-js-sys              ={ version="0.3.64", optional=true }
-base64              ={ version="0.13.0", optional=true }
-serde_json          ={ version="1.0", optional=true }
+wasm-bindgen={ version="0.2.87", optional=true }
+wasm-bindgen-derive={ version="0.2", optional=true }
+js-sys={ version="0.3.64", optional=true }
+base64={ version="0.13.0", optional=true }
+schnorrkel={ version="0.9.1", default-features=false, features=[
+  "std",
+  "wasm-bindgen",
+], optional=true }
+
+[dev-dependencies]
+sp-keyring="24.0.0"
 
 [features]
 default=["server"]
@@ -64,7 +69,6 @@ wasm=[
   "dep:js-sys",
   "dep:base64",
   "subxt/web",
-  "dep:serde_json",
   "dep:schnorrkel",
 ]
 
