Add JS tests to CI script

--- a/.circleci/then.yml
+++ b/.circleci/then.yml
@@ -109,7 +109,12 @@ jobs:
                   yarn
                   cd ../../..
             - run:
-                command: pushd node && cargo build --all-targets --release -j $(nproc) && cargo test --all-targets --release
+                command: |
+                    pushd node
+                    cargo build --all-targets --release -j $(nproc)
+                    cargo test --all-targets --release
+                    cd crates/protocol/nodejs-test
+                    yarn test
                 no_output_timeout: 45m
     build-and-release:
         machine:
