Add feature flag for running wasm integration tests

--- a/crates/threshold-signature-server/Cargo.toml
+++ b/crates/threshold-signature-server/Cargo.toml
@@ -90,3 +90,6 @@ std    =["sp-core/std"]
 unsafe =[]
 alice  =[]
 bob    =[]
+# Enable this feature to run the integration tests for the wasm API of entropy-protocol
+# This requires the entropy-protocol node-js module to be built and so is not run by default
+wasm_test=[]
