--- a/.circleci/then.yml
+++ b/.circleci/then.yml
@@ -111,7 +111,7 @@ jobs:
             - run:
                 command: |
                     pushd node && cargo build --all-targets --release -j $(nproc) && cargo test --all-targets --release
-                    cargo test -p entropy-tss -F wasm_test test_wasm
+                    cargo test -p entropy-tss --release -F wasm_test test_wasm
                 no_output_timeout: 45m
     build-and-release:
         machine:
