Only run wasm integration tests when a feature is enabled (#565)
* Add feature flag for running wasm integration tests

* Update CI script to explicitly run wasm integration tests

* Run tests in release mode in CI script

* Update CHANGELOG

--- a/.circleci/then.yml
+++ b/.circleci/then.yml
@@ -109,7 +109,9 @@ jobs:
                   yarn
                   cd ../../..
             - run:
-                command: pushd node && cargo build --all-targets --release -j $(nproc) && cargo test --all-targets --release
+                command: |
+                    pushd node && cargo build --all-targets --release -j $(nproc) && cargo test --all-targets --release
+                    cargo test -p entropy-tss --release -F wasm_test test_wasm
                 no_output_timeout: 45m
     build-and-release:
         machine:
